@@ -1631,6 +1631,7 @@ setnames = function(x,old,new) {
 setcolorder = function(x,neworder)
 {
     if (!is.data.table(x)) stop("x is not a data.table")
+    if (any(duplicated(names(x)))) stop("x has some duplicated column name(s): ",paste(names(x)[duplicated(names(x))],collapse=","),". Please remove or rename the duplicate(s) and try again.")
     if (length(neworder)!=length(x)) stop("neworder is length ",length(neworder)," but x has ",length(x)," columns.")
     if (is.character(neworder)) {
         if (any(duplicated(neworder))) stop("neworder contains duplicate column names")
